<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp"
    tools:context="com.sdp.swiftwallet.presentation.signIn.RegisterActivity">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerTitle"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <FrameLayout
        android:id="@+id/registerImageProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/registerImageProfileBackground"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/background_image"
            android:scaleType="centerCrop"
            app:riv_oval="true"/>

        <TextView
            android:id="@+id/registerImageProfileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_image"
            android:textColor="@color/secondary_text"
            android:textSize="11sp"/>
    </FrameLayout>

    <EditText
        android:id="@+id/registerInputUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_input"
        app:layout_constraintTop_toBottomOf="@+id/registerImageProfileLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/usernameTv"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/registerInputEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_input"
        app:layout_constraintTop_toBottomOf="@+id/registerInputUsername"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/emailTv"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/registerInputPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_input"
        app:layout_constraintTop_toBottomOf="@+id/registerInputEmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/passwordTv"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/registerInputConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_input"
        app:layout_constraintTop_toBottomOf="@+id/registerInputPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/confirmPasswordTv"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="16sp"/>

    <FrameLayout
        android:id="@+id/registerBtnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:animateLayoutChanges="true"
        app:layout_constraintTop_toBottomOf="@+id/registerInputConfirmPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/registerTv"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_background_color"
            android:textSize="13sp"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/registerBtnProgressBar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:visibility="invisible"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>