<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="35dp">

  <TextView
    android:id="@+id/loginTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/forgot_password"
    android:textColor="@color/primary_text"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    />

  <ImageView
    android:id="@+id/appLogo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@android:drawable/sym_def_app_icon"
    app:layout_constraintTop_toBottomOf="@+id/loginTitle"
    android:layout_marginTop="20dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:contentDescription="@string/appLogoDescription" />


  <EditText
    android:id="@+id/emailField"
    android:layout_height="50dp"
    android:layout_width="match_parent"
    android:layout_marginTop="40dp"
    app:layout_constraintTop_toBottomOf="@+id/appLogo"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:hint="@string/email"
    android:imeOptions="actionNext"
    android:inputType="text"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:textColor="@color/primary_text"
    android:background="@drawable/background_input"
    android:importantForAutofill="no" />

  <Button
    android:id="@+id/sendReset"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="28dp"
    android:text="@string/send_reset"
    android:backgroundTint="@color/button_background_color"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/emailField" />

  <Button
    android:id="@+id/goBackForgotPw"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/back"
    android:backgroundTint="@color/button_background_color"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.997"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>